--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node-themoviedb": "^0.1.4",
     "open-graph-scraper": "^3.6.2",
     "request": "^2.88.2",
+    "telegraf": "^3.37.0",
+    "telegraf-inline-menu": "^4.0.0",
     "xregexp": "^4.3.0"
   }
 }
